rename project libxunscrollzoom -> xunscrollzoom

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-LIBXUNSCROLLZOOM
-=================
+XUNSCROLLZOOM
+==============
 
 by Kevin Pulo, kev@pulo.com.au
-https://github.com/devkev/libxunscrollzoom/
+https://github.com/devkev/xunscrollzoom/
 Copyright (c) 2019
 Licensed under the GNU GPL v2 or higher, as per the COPYING file.
 
